--- a/10_mood.Rmd
+++ b/10_mood.Rmd
@@ -15,27 +15,35 @@ Depending on the study focus and research questions, mood measurement can be ope
 Perhaps the most seemingly straight-forward method to measure mood is to ask 'face-valid' unidimensional questions such as "How is your mood right now" [@VanBallegooijen2016] or "How are you feeling right now" [@VandeVen2017].
 
 Respondents rate these questions on a Likert scale or a Visual Analogue Scale (VAS), aimed to indicate mood intensity. Typically, VAS scales will range from zero (low or worst mood) to 10 or 100 (good or best mood). 
-
-Compared to classic paper-and-pencil methods, digital unidimensional EMA might lead to more accurate data on (in)variability of mood, because retrospective bias is thought to be less of an issue. Further, plotting this data in a graph is an easy way to visually inspect within-subject change in general mood:
+Plotting this data in a graph is an easy way to visually inspect within-subject change in general mood:
 
 ```{r fig10a, fig.cap = "34 weeks of mood data, from a single participant"}
-ggplot(csd, aes(x = date, y = as.numeric(mood_irritat))) +
-  geom_smooth(method = "loess", span = .05, se = FALSE) + 
-  geom_point(size = .5, alpha = .5, position = position_jitter(height = .1)) + 
+plotmood_down <- ggplot(csd, aes(x = date, y = as.numeric(mood_down))) +
+  geom_smooth(method = "loess", span = .05, se = FALSE, colour="dodgerblue4") + 
+  geom_point(size = .3, alpha = .3, position = position_jitter(height = .1),colour="dodgerblue2") + 
   scale_x_date() + scale_y_continuous(breaks = 1:7) + 
   xlab("Time") + ylab("Mood")
+print(plotmood_down)
 ```  
 
 Combining data from various variables such as activity, sleep and mood in one graph can help respondents understand the interaction between mood and behaviour. 
 
-A downside of unidimensional mood assessment is that is assumes that respondents instinctively understand the concept of general mood. Little is known about whether mood ratings are indeed comparable across respondents (between-subjects). In order to reduce bias and improve reliability, some studies implemented more specific questions, such as "How depressed are you feeling right now" or "How anxious are you feeling right now [@Starr2012]. However, this shifts focus from general mood to more specific mood states or emotions.
-Another aspect to consider is that the middle of a VAS scale (e.g. 5 or 50) is considered a negative result, and only scores above 6 or 60 are considered acceptable or possible mood states [@Groot2010]. This contrasts with common Likert scales, where the centre often reflects a neutral response. In order to address this issue, some researchers have proposed to use scales ranging from -1 to 1, with 0 as a neutral scale centre. This scale implies a mood state that ranges from negative to positive, rather than absent to present.  
+```{r fig10f, fig.cap = "34 weeks of combined mood data, from a single participant"}
+plotcombined <- plotmood_down + geom_point(data=csd, aes(date,as.numeric(mood_lonely)), size = .3, alpha = .3, position = position_jitter(height = .1), colour="indianred4") + geom_smooth(data=csd, aes(date,as.numeric(mood_lonely)), method = "loess", span = .05, se = FALSE, colour="indianred2")
+print(plotcombined)
+```  
 
-Another option is to use bipolar-unidimensional items, which place two opposing mood states at each end of the scale, for example by asking "Please rate your current mood on a scale of 0 to 100, on which 0 indicates happy, and 100 indicates sad" [@VanRijsbergen2014]. The bipolar-unidimensional method was shown to be able to predict time to relapse over 5.5 years in recurrently depressed out-patients, with 6.3% of variance in time to relapse explained. This percentage was comparable to that of the HAM-D [@Rijsbergen2012]. Also the scale was able to detect relapse in patients with recurrent Major Depressive Disorder (based on SCID-I interview) at a cut-off score of 55, and outperformed the HAM-D and IDS-SR. However, 47% of patients indicated by the VAS scale did not fulfil formal criteria for relapse (false positives) [@VanRijsbergen2014]. 
+There are a few things to consider when using unidimensional mood assessment.
+First, it assumes that respondents instinctively understand the concept of general mood. Little is known about whether mood ratings are indeed comparable across respondents (between-subjects). In order to reduce bias and improve reliability, some studies implemented more specific questions, such as "How depressed are you feeling right now" or "How anxious are you feeling right now [@Starr2012]. However, this shifts focus from general mood to more specific mood states or emotions.
+Secondly, the middle of a VAS scale (e.g. 5 or 50) is considered a negative result, and only scores above 6 or 60 are considered acceptable or possible mood states [@Groot2010]. This contrasts with common Likert scales, where the centre often reflects a neutral response. In order to address this issue, some researchers have proposed to use scales ranging from -1 to 1, with 0 as a neutral scale centre. This scale implies a mood state that ranges from negative to positive, rather than absent to present.  
+
+### Bipolar unidimensinal items
+\index{Bipolar unidimensinal items}
+Another option is to use bipolar unidimensional items, which place two opposing mood states at each end of the scale, for example by asking "Please rate your current mood on a scale of 0 to 100, on which 0 indicates happy, and 100 indicates sad" [@VanRijsbergen2014]. The bipolar-unidimensional method was shown to be able to predict time to relapse over 5.5 years in recurrently depressed out-patients, with 6.3% of variance in time to relapse explained. This percentage was comparable to that of the HAM-D [@Rijsbergen2012]. Also the scale was able to detect relapse in patients with recurrent Major Depressive Disorder (based on SCID-I interview) at a cut-off score of 55, and outperformed the HAM-D and IDS-SR. However, 47% of patients indicated by the VAS scale did not fulfil formal criteria for relapse (false positives) [@VanRijsbergen2014]. 
 
 ## Multi-dimensional mood assessment
 \index{Multi-dimensional mood assessment}
-Dimensional models assume that affective states or emotions should be described by (at least) two underlying constructs, instead of just one. Over the past decades several multi-dimensional models have been specified (for an overview, see @sander2009). In the context of EMA, researchers most often base their items on the circumplex model [@Russell190circumplex] or the Positive/Negative affect theory. 
+Dimensional models assume that affective states or emotions should be described by (at least) two underlying constructs, instead of just one. Over the past decades several multi-dimensional models have been specified (for an overview, see @sander2009). In the context of EMA, researchers most often base their items on the circumplex model [@russell1980circumplex] or the Positive/Negative affect theory [@watson1985]. 
 
 ### The Circumplex Model
 \index{Circumplex model}
@@ -45,15 +53,17 @@ The Circumplex Model of affect [@russell1980circumplex; @Posner2005] argues that
 knitr::include_graphics("images/outcomes/Russell_1980.png")
 ```
 
-There are several options to operationalise the Circumplex model in EMA research. For example, respondents can rate valence and arousal on two VAS scales. Scores on the two scales can be reported seperately, or presented as 
-
-The combination of the resulting scores than gives insight into the quadrant in which respondents affective states fall:
+There are several options to operationalise the Circumplex model in EMA research. For example, respondents can rate valence and arousal on two VAS scales. The most pragmatic approach is to report both scale scores seperately [@asselbergs2016]. Alternatively, scores can be combined to give insight into the quadrant in which respondents affective states fall:
 > Low aroused - unpleasant
 > Low aroused - pleasant
 > High aroused - unpleasant
 > High aroused - pleasant
 
-A downside of this approach is that concepts of valence and arousal can be hard to convey to respondents, especially when translated to other languages, such as Dutch. One alternative is to adjust the scale ends, for example using “extreme sleepiness” and “extreme high energy” [@sharar2016]. 
+A downside of the Circumplex model is that concepts of valence and arousal can be hard to convey to respondents, especially when translated to other languages, such as Dutch. One alternative is to adjust the scale ends, for example using “extreme sleepiness” and “extreme high energy” [@sharar2016]. 
+
+
+
+
 Another option is to use pictures or emoticons, rather than language. For this purpose, DeSmet and colleagues developed the pick-a-mood scale, which is a pictorial self-report scale. The scale builds on the circumplex model and adds the third dimension "dominance" (level of experienced control over the mood state), rendering eight different mood states and one neutral state. 
 
 ```{r fig10b, fig.cap = "The Pick-A-Mood Circle.", echo = FALSE, out.width = '50%'}
